# AxVM

./: .gitignore  NETWORK_TEST.md  README-pt.md  README.md  ROOTFS_BUILD.md  build_kernel.sh  build_rootfs.sh  configure_network.sh  test_tap.sh
axvm_core/: .gitignore  Cargo.toml  test_tap.rs
axvm_core/src/: acpi.rs  config.rs  error.rs  linux.rs  loader.rs  main.rs  memory.rs  metrics.rs  serial.rs  tap.rs  vcpu.rs  virtio.rs  virtio_net.rs
