[package]
name = "axvm_core"
version = "0.2.0"
edition = "2021"

[dependencies]
kvm-ioctls = "0.19.0"
kvm-bindings = "0.10.0"
libc = "0.2"
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
